# QtSocket

./: README.md
src/QtSocket/: CMakeLists.txt  Main.qml  MainMenu.qml  ServerResponseData.cpp  ServerResponseData.h  ServerResponseFile.cpp  ServerResponseFile.h  ServerResponseProvider.cpp  ServerResponseProvider.h  SocketClient.qml  SocketClientController.cpp  SocketClientController.h  SocketServer.qml  SocketServerController.cpp  SocketServerController.h  main.cpp
